--- a/backend/.env
+++ b/backend/.env
@@ -1,13 +1,9 @@
-
 # Server configuration
 PORT=3001
 
-# MySQL Database configuration
-# Asegúrate de que estas credenciales coincidan con tu configuración local de MySQL
-DB_HOST=localhost
-DB_USER=root
-DB_PASSWORD=
-DB_NAME=neoarcade
+# PostgreSQL Database configuration (Neon)
+# Sustituye "user", "password", "host.neon.tech", y "dbname" con los datos reales que Neon te proporciona
+DATABASE_URL=postgresql://neondb_owner:npg_c2iehkAWX4rw@ep-holy-bonus-a2s2e8pb-pooler.eu-central-1.aws.neon.tech/neondb?sslmode=require
 
 # JWT configuration
 JWT_SECRET=neoarcade_jwt_secret_key_change_in_production
