--- a/backend/package.json
+++ b/backend/package.json
@@ -1,20 +1,20 @@
-
 {
   "name": "neoarcade-backend",
   "version": "1.0.0",
-  "description": "Backend API for NeoArcade app",
+  "description": "Backend API for NeoArcade app (PostgreSQL version)",
   "main": "server.js",
   "scripts": {
     "start": "node server.js",
     "dev": "nodemon server.js"
   },
+  "type": "commonjs",
   "dependencies": {
     "bcrypt": "^5.1.1",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "jsonwebtoken": "^9.0.2",
-    "mysql2": "^3.9.3"
+    "pg": "^8.11.3"
   },
   "devDependencies": {
     "nodemon": "^3.1.0"
